# Flight-Manager

./: CMakeLists.txt  main.cpp
data/: admin.txt  airplane.txt  customer.txt  flight.txt  ticket_queue.txt
data/tickets/: F003-1  F003-2  F003-3  F003-4  F003-5  F003-6  F003-7  F003-8  F004-1  F004-2  F004-3  F004-4  F004-5  F004-6  F004-7  F005-1  F005-2  F005-5  F005-6  F005-7  F005-8  F006-1  F006-2  F006-4  F006-7  F007-1  F007-2  F007-3  F007-4  F007-5  F007-6  F008-2  F014-2  T001  T002  T003  T004
include/core/: Admin.h  Airplane.h  Customer.h  DateTime.h  Flight.h  FlightStatus.h  Ticket.h
include/data/: DataProcessor.h
include/datastructures/: List.hpp  Queue.hpp
include/repository/: AdminRepository.h  AirplaneRepository.h  CustomerRepository.h  FlightRepository.h  TicketQueueRepository.h  TicketRepository.h
include/service/: AuthService.h  CustomerService.h  FlightManager.h  TicketManager.h
include/ui/: ConsoleUI.h  MenuController.h
src/core/: Admin.cpp  Airplane.cpp  Customer.cpp  DateTime.cpp  Flight.cpp  Ticket.cpp
src/data/: DataProcessor.cpp
src/repository/: AdminRepository.cpp  AirplaneRepository.cpp  CustomerRepository.cpp  FlightRepository.cpp  TicketQueueRepository.cpp  TicketRepository.cpp
src/service/: AuthService.cpp  CustomerService.cpp  FlightManager.cpp  TicketManager.cpp
src/ui/: ConsoleUI.cpp  MenuController.cpp
